--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 					<h1 class="text-white" style="padding-top: 40vh;">
 						18:01
 						<br>
-						Studio After Six
+						Studio After 
+						<br class="small-only" />
+						Six
 					</h1>
 				</div>
 			</div>
@@ -42,6 +44,7 @@
 						<br>worked 
 						<br>with
 					</h1>
+					<a class="text-white font-14 contact-us">hello@studioaftersix.com</a>
 				</div>
 			</div>
 		</div>
