--- a/index.html
+++ b/index.html
@@ -7,44 +7,64 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font.css">
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/bg.jpg')">
+	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/bg-1.jpg')" id="title-page">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12">
-					<h1 class="text-white" style="padding-top: 40vh;">
-						18:01
+				<div class="col-12">
+					<h1 class="text-white">
+						<img id="logo" src="./assets/images/studio-logo-time.svg">
 						<br>
 						Studio After 
-						<br class="small-only" />
+						<br class="small-only">
 						Six
 					</h1>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/bg.jpg')">
+	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/bg-1.jpg')" id="what-we-do">
 		<div class="container">
-			<div class="row" style="padding-top: 40vh;">
-				<div class="col-xs-12">
-					<h1 class="text-white">
-						We do
+			<div class="row">
+				<div class="col-12">
+					<h1 class="text-white service">
+						We do Branding, Strategy,
+						<br>UX, and Content Creation
+						<br>among others.
 					</h1>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/bg.jpg')">
+	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/bg-1.jpg')" id="portfolio">
+		<div class="container brands">
+			<div class="row">
+				<div class="col-12">
+					<h1 class="text-white collab">
+						We've collaborated with:
+						<img class="brand-logos big-only" src="./assets/images/d_logos.png"/>
+						<img class="brand-logos small-only" src="./assets/images/m_logos.png"/>
+					</h1>		
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="banner-image bg-fixed sxn-full" style="background-image: url('./assets/images/white bg.jpg')" id="contact">
 		<div class="container">
-			<div class="row" style="padding-top: 40vh;">
-				<div class="col-xs-12">
-					<h1 class="text-white">
-						We've 
-						<br>worked 
-						<br>with
-					</h1>
-					<a class="text-white font-14 contact-us">hello@studioaftersix.com</a>
+			<div class="row" style="padding-top: 35vh;">
+				<h1 class="text-black col-12 col-sm-6">
+					Let's 
+					<br>boogie.
+				</h1>
+				<div class="text-black col-12 col-sm-6" style="padding-top: 6vh;">
+					<h2 class="social"><img class="social-text" src="./assets/images/email.jpg"/>
+						<a href="mailto:hello@studioaftersix.com">hello@studioaftersix.com</a>
+					</h2>
+					<h2 class="social"><img class="social-text" src="./assets/images/ig.jpg"/>
+						<a href="https://www.instagram.com/studioaftersix/" target="_blank">@studioaftersix</a>
+					</h2>
 				</div>
 			</div>
 		</div>
